--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,12 @@ click==8.1.8
 colorama==0.4.6
 dj-database-url==2.3.0
 Django==5.2
-# gunicorn==23.0.0
+gunicorn
 h11==0.14.0
+mysqlclient
 packaging==24.2
 pillow==11.1.0
-# psycopg2-binary==2.9.10
-# python-dotenv==1.1.0
- sqlparse==0.5.3
+sqlparse==0.5.3
 typing_extensions==4.13.2
 tzdata==2025.2
-# uvicorn==0.34.1
-# whitenoise==6.9.0
+whitenoise
